# rdda_ur5_control

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
client/: control_client_py3.py
config/: rdda_ur5_control_params.yaml
launch/: control_server.launch
scripts/: control_core.py  control_server.py  test.py
scripts/rdda/: rdda_comm_bridge.py  rdda_data_receiver.py  rdda_position_control.py  rdda_ros_controller.py  rdda_subprocess_controller.py  util.py
scripts/ur5/: ur5_controller.py
srv/: Move.srv  MoveLinear.srv  MoveRead.srv  MoveTraj.srv  NoParam.srv  RddaData.srv  SetRddaParam.srv
